--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body{
     background-color: #f0f0f0;
     padding: 20px;
     border-radius: 10px;
+    border: 2px solid black;
 
 }
 #card1{
@@ -41,4 +42,19 @@ body{
     transition: transform 0.2s;
     border: 2px solid black;
     padding: 10px;
+}
+img{
+    width: 150px;
+    height: 150px;
+    margin-bottom: 10px;
+    padding: 20px;
+}
+button{
+    padding: 10px 20px;
+    background-color: rgb(9, 32, 57);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 10px;
 }
